--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 .container{
-    background-color:rgb(78, 157, 157);
+    background-color:rgb(40, 198, 124);
     width: 500px;
+    margin-top: 30px;
     height:300px;
     border-radius: 10px;
     margin-left:30px;
     padding: 90px 40px;
+    margin-bottom: 50px;
     
 }
 h1{
@@ -12,6 +14,7 @@ font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, O
 
 }
 p{
+    font-weight: 700;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .btn{
@@ -25,6 +28,7 @@ p{
 .profile{
     width: 500px;
     height: 300px;
+    margin: 30px 40px;
     border:2px solid lightgray;
     font-size: medium;
     border-radius: 5px;
@@ -33,6 +37,10 @@ p{
 }
 .profile-heading{
     padding-left: 40px;
+}
+.profile-subtext{
+    padding-left: 40px;
+    font-weight: 400;
 }
 .see-profile{
     color: blue;
@@ -58,7 +66,7 @@ p{
 .box{
     border: 1px solid lightgray;
     width: 350px;
-    margin: 30px auto;
+    margin: 50px 40px;
     border-radius: 14px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -69,6 +77,9 @@ p{
 }
 .box-body{
     padding: 30px;
+}
+.sub-text{
+    font-weight: 100;
 }
 .lock{
     height: 15px;
@@ -89,6 +100,7 @@ p{
 
 
  .form{
+    margin:30px 40px ;
     width: 450px;
     height: 500px;
     text-align: center;
@@ -114,6 +126,7 @@ p{
     color: white;
     font-size: 100%;
     font-weight: bold;
+    margin-top: 20px;
     border-radius: 40px;
     padding:10px 40px;
     border-style: none;
